manifests/forgejo/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-crowdsec-bouncer@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - forgejo.jmarcelocarvalho.com
      secretName: forgejo-tls
  rules:
    - host: forgejo.jmarcelocarvalho.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port:
                  number: 3000
